--- a/oneliners/templates/404.html
+++ b/oneliners/templates/404.html
@@ -1,23 +1,26 @@
 {% extends "base.html" %}
 
-{% block pagetitle %}Page not found{% endblock %}
+{% block pagetitle %}Not found{% endblock %}
 
-{% block pageheader %}Page not found{% endblock %}
+{% block pageheader %}<h1>Not found</h1>{% endblock %}
 
 {% block content %}
 
-    <div class="alert alert-danger">
-        <p>The page you are trying to reach does not exist (404).</p>
+<div class="alert alert-danger">
+    <p>The page you are trying to reach does not exist.</p>
 
-        <p>Path: <strong>{{ request_path }}</strong></p>
+    <p>Path: <strong>{{ request_path }}</strong></p>
 
-        <p>If you think this is some kind of error,
-            please create an issue on <a href="https://github.com/janosgyerik/bashoneliners/issues">GitHub</a>.
-            Please include in the issue this path you could not access (<code>{{ request_path }}</code>),
-            and the URL from which you got here (<code>{{ request.META.HTTP_REFERER|default:"???" }}</code>).
-        </p>
-    </div>
+    <p>If you think this is some kind of error,
+        please create an issue on <a href="https://github.com/janosgyerik/bashoneliners/issues">GitHub</a>.
+        Please include:
+    </p>
+    <ul>
+        <li>the path you could not access (<code>{{ request_path }}</code>)</li>
+        <li>the URL from which you got here (<code>{{ request.META.HTTP_REFERER|default:"???" }}</code>)</li>
+    </ul>
+</div>
 
-    <p><a href="/">Back to the main page.</a></p>
+<p><a href="/">Back to the main page.</a></p>
 
 {% endblock %}
