--- a/oneliners/templates/oneliners/elements/profile_nav.html
+++ b/oneliners/templates/oneliners/elements/profile_nav.html
@@ -1,10 +1,11 @@
-<ul class="nav nav-tabs nav-profile">
+<ul class="nav nav-tabs nav-justified mb-3" role="tablist">
     {% if hacker == user %}
-        <li class="{{ active_votes }}">
-            <a href="{% url 'profile_votes' %}">Votes</a>
+        <li class="nav-item" role="presentation">
+            <a class="nav-link {{ active_votes }}" href="{% url 'profile_votes' %}" role="tab">Votes</a>
         </li>
     {% endif %}
-    <li class="{{ active_oneliners }}">
-        <a href="{% url 'profile_oneliners_of' hacker.pk %}">One-Liners</a>
+    <li class="nav-item" role="presentation">
+        <a class="nav-link {{ active_oneliners }}" href="{% url 'profile_oneliners_of' hacker.pk %}" role="tab">One-Liners</a>
     </li>
 </ul>
+
