--- a/oneliners/templates/html5.html
+++ b/oneliners/templates/html5.html
@@ -1,27 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 {% load static %}
-<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
-<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
-<!-- Consider adding an manifest.appcache: h5bp.com/d/Offline -->
-<!--[if gt IE 8]><!-->
-<html class="no-js" lang="en"> <!--<![endif]-->
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-
-    <!-- Use the .htaccess and remove these lines to avoid edge case issues.
-         More info: h5bp.com/b/378 -->
-    <!--
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    -->
-
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>{% block title %}{% endblock %}</title>
+    <!-- bashoneliners icon -->
+    <link rel="icon" href="{% static 'images/favicon.ico' %}?v=3" type="image/x-icon"/>
+    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}?v=3" type="image/x-icon"/>
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
+    <!-- Google Fonts Roboto -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
+    />
+    <!-- MDB -->
+    <link rel="stylesheet" href="{% static 'mdb/css/mdb.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/mdb-fixes.css' %}">
+
+    <!-- bashoneliners -->
+    <link rel="stylesheet" href="{% static 'upvotejs/upvotejs.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bashoneliners.css' %}">
+
     <meta name="description" content="{% block description %}{% endblock %}">
     <meta name="author" content="Janos Gyerik info@bashoneliners.com">
-
-    <!-- Mobile viewport optimized: j.mp/bplateviewport -->
-    <meta name="viewport" content="width=device-width,initial-scale=1">
 
     <!-- SERVER_NAME={{ SERVER_NAME }} -->
     <!-- request.META.HTTPS={{ request.META.HTTPS }} -->
@@ -30,32 +37,13 @@
      See https://developers.google.com/search/docs/crawling-indexing/robots-meta-tag -->
     <meta name="robots" content="none">
     {% endif %}
+  </head>
 
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
-    <link href="{% static 'images/favicon.ico' %}?v=3" rel="icon" type="image/x-icon"/>
-    <link href="{% static 'images/favicon.ico' %}?v=3" rel="shortcut icon" type="image/x-icon"/>
-
-    <!-- CSS: implied media=all -->
-    <!-- CSS concatenated and minified via ant build script-->
-    <link rel="stylesheet" href="{% static 'css/smoothness/jquery-ui-1.8.17.custom.css' %}">
-    <link rel="stylesheet" href="{% static 'bs3/dist/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'upvotejs/upvotejs.css' %}">
-    <link rel="stylesheet" href="{% static 'css/bashoneliners.css' %}">
-    <!-- end CSS-->
-
-    <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
-
-    <!-- All JavaScript at the bottom, except for Modernizr / Respond.
-         Modernizr enables HTML5 elements & feature detects; Respond is a polyfill for min/max-width CSS3 Media Queries
-         For optimal performance, use a custom Modernizr build: www.modernizr.com/download/ -->
-    <script src="{% static 'js/libs/modernizr-2.0.6.min.js' %}"></script>
-</head>
-
-<body>
+  <body>
 
 {% block navbar %}{% endblock %}
 
-<div class="container">
+<div class="container main">
     {% block main %}{% endblock %}
 </div>
 
@@ -63,51 +51,22 @@
     {% block footer %}{% endblock %}
 </footer>
 
-
-<!-- JavaScript at the bottom for fast page loading -->
-
-<!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="{% static 'js/jquery-1.7.1.min.js' %}"><\/script>')</script>
-<script>document.write('<script src="{% static 'js/jquery-ui-1.8.17.custom.min.js' %}"><\/script>')</script>
-
-
-<!-- scripts concatenated and minified via ant build script-->
-<script defer src="{% static 'js/plugins.js' %}"></script>
-<script defer src="{% static 'js/django-jquery-csrf.js' %}"></script>
-<script defer src="{% static 'bs3/dist/js/bootstrap.min.js' %}"></script>
-<script defer src="{% static 'js/showdown.js' %}"></script>
-<script defer src="{% static 'upvotejs/upvotejs.vanilla.js' %}"></script>
-<script defer src="{% static 'js/bashoneliners.js' %}"></script>
-<!-- end scripts-->
-
-<script type="text/javascript">
-    <!--
-    var App = window.App = {};
-    App.user_id = '{{ user.id }}';
-    $(document).ready(function () {
-        {% block ready %}{% endblock %}
-    });
-    //-->
-</script>
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', '{{ GOOGLE_ANALYTICS_ID }}', 'auto');
-  ga('send', 'pageview');
-</script>
-
-
-<!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
-     chromium.org/developers/how-tos/chrome-frame-getting-started -->
-<!--[if lt IE 7 ]>
-    <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
-    <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
-  <![endif]-->
-
-</body>
+    <!-- MDB -->
+    <script type="text/javascript" src="{% static 'mdb/js/mdb.min.js' %}"></script>
+    <!-- Custom scripts -->
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript">window.jQuery || document.write('<script src="{% static 'js/jquery-1.7.1.min.js' %}"><\/script>')</script>    <script type="text/javascript" src="{% static 'js/django-jquery-csrf.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/showdown.js' %}"></script>
+    <script type="text/javascript" src="{% static 'upvotejs/upvotejs.vanilla.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/bashoneliners.js' %}"></script>
+    <script type="text/javascript">
+        <!--
+        var App = window.App = {};
+        App.user_id = '{{ user.id }}';
+        $(document).ready(function () {
+            {% block ready %}{% endblock %}
+        });
+        //-->
+    </script>
+  </body>
 </html>
