--- a/oneliners/templates/oneliners/pages/profile_votes.html
+++ b/oneliners/templates/oneliners/pages/profile_votes.html
@@ -2,10 +2,12 @@
 
 {% block profiletab %}
 
-    {% with 'active' as active_votes %}
+    {% with active_votes="active" %}
         {% include 'oneliners/elements/profile_nav.html' %}
     {% endwith %}
 
-    {% include 'oneliners/elements/oneliners.html' %}
+    {% with voting_enabled=1 %}
+        {% include 'oneliners/elements/oneliners.html' %}
+    {% endwith %}
 
 {% endblock %}
